# csh-eval

./: .gitignore  .gitmodules  Gruntfile.js  LICENSE  MANIFEST.in  README.md  bootstrap-csh-members.css  circle.yml  csh-eval.cabal  ldapImport.hs  package.json  requirements.txt  setup.py  stack.yaml
app/: Main.hs
config/: csh-eval.rc  csh-eval.rc.example  routes
db/: DBInitMain.hs  eval_schema.sql  import.py  recreatedb.sh
dev/: members.css  members.less  public.css  public.less
doc/: eval_schema.markdown
evals/: schema.py  server.py
frontend/: README.md  index.hamlet
frontend/evals/membership/: overview.hamlet
frontend/static/: csh-bootstrap.min.css  csh-eval.css  csh-eval.lucius
frontend/static/csh-bootstrap/: Gruntfile.js  README.md  package.json
frontend/static/csh-bootstrap/dev/: members.css  public.css
frontend/static/csh-bootstrap/test/public/: index.html
frontend/templates/: base.hamlet  csh-eval.lucius  index.hamlet
frontend/templates/attendance/: index.hamlet
frontend/templates/member/widgets/: evaluation.hamlet
frontend/templates/members/: index.hamlet
frontend/templates/projects/: create.hamlet  index.hamlet  project.hamlet  projects.lucius
frontend/templates/widgets/: panel.hamlet
lib/CSH/Eval/: DB.hs  Routes.hs
release/: members.min.css  public.min.css
src/: Main.hs
src/CSH/: LDAP.hs
src/CSH/Eval/: Cacheable.hs  Config.hs  Frontend.hs  LDAP.hs  Member.hs  Model.hs  Routes.hs
src/CSH/Eval/Cacheable/: Fetch.hs  Make.hs  Prim.hs
src/CSH/Eval/DB/: ContextPool.hs  Init.hs  Schema.hs  Statements.hs
src/CSH/Eval/Frontend/: Attendance.hs  Data.hs  Evals.hs  Home.hs  Members.hs  ProfilePhoto.hs  Projects.hs  Widgets.hs
test/: Tests.hs
test/members/: index.html
test/public/: index.html
