-- csh-eval.cabal

name:                  csh-eval
version:               0.1.0.0
synopsis:              REPL for PEOPLE
description:           REPL for PEOPLE
homepage:              https://github.com/ComputerScienceHouse/csh-eval
license:               MIT
license-file:          LICENSE
author:                Matt Gambogi, Stephen Demos, Travis Whitaker
maintainer:            pvals@csh.rit.edu
copyright:             Matt Gambogi, Stephen Demos, Travis Whitaker, Computer Science House 2015
category:              Control
build-type:            Simple
extra-source-files:    README.md
cabal-version:         >=1.10

executable csh-eval
  main-is:             Main.hs
  build-depends:      ansi-wl-pprint
                      ,base                 >=4.7      && <4.9
                      ,blaze-markup         >=0.7      && <0.8
                      ,bytestring           >=0.10.4   && <0.10.7
                      ,csh-eval
                      ,hasql                >=0.7.3    && <0.7.4
                      ,hasql-postgres       >=0.10.3   && <0.10.4
                      ,optparse-applicative
                      ,safe                 >=0.3.9    && <0.3.10
                      ,servant              >=0.4      && <0.5
                      ,servant-server       >=0.4      && <0.5
                      ,shakespeare          >=2.0.5    && <2.0.6
                      ,text                 >=1.2      && <1.3
                      ,time                 >=1.4.2    && <1.5.1
                      ,uuid                 >=1.3.10   && <1.3.11
                      ,wai                  >=3.0.2    && <3.0.4
                      ,warp                 >=3.0.13   && <3.0.14
                      ,warp-tls
                      ,yesod                >=1.4.1    && <1.4.2
                      ,yesod-markdown       >=0.10.0
                      ,yesod-static         >=1.2.0    && <1.6.0
  hs-source-dirs:      src
  default-extensions:  OverloadedStrings
  default-language:    Haskell2010

executable csh-eval-db-init
  main-is:             DBInitMain.hs
  hs-source-dirs:      db
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  build-depends:       base                 >=4.7      && <4.9
                      ,hasql                >=0.7.3    && <0.7.4
                      ,hasql-postgres       >=0.10.3   && <0.10.4
                      ,bytestring           >=0.10.4   && <0.10.7
                      ,optparse-applicative
                      ,text                 >=1.2.0.6  && <1.3
                      ,uuid                 >=1.3.10   && <1.3.11
                      ,csh-eval

library
  exposed-modules:     CSH.Eval.DB.Schema
                      ,CSH.Eval.DB.Statements
                      ,CSH.Eval.Frontend
                      ,CSH.Eval.Frontend.Data
                      ,CSH.Eval.Frontend.Projects
                      ,CSH.Eval.Frontend.Evals
                      ,CSH.Eval.Frontend.Home
                      ,CSH.Eval.Frontend.Widgets
                      ,CSH.Eval.Routes
                      ,CSH.Eval.Model
                      ,CSH.LDAP
  hs-source-dirs:      src
  build-depends:       base                 >=4.7      && <4.9
                      ,blaze-markup         >=0.7      && <0.8
                      ,bytestring           >=0.10.4   && <0.10.7
                      ,hasql                >=0.7.3    && <0.7.4
                      ,hasql-postgres       >=0.10.3   && <0.10.4
                      ,ldap-client          >=0.1.0    && <0.1.1
                      ,safe                 >=0.3.9    && <0.3.10
                      ,servant              >=0.4      && <0.5
                      ,servant-server       >=0.4      && <0.5
                      ,shakespeare          >=2.0.5    && <2.0.6
                      ,text                 >=1.2.0.6  && <1.3
                      ,time                 >=1.4.2    && <1.5.1
                      ,uuid                 >=1.3.10   && <1.3.11
                      ,wai                  >=3.0.2    && <3.0.4
                      ,yesod                >=1.4.1    && <1.4.2
                      ,yesod-auth
                      ,yesod-markdown       >=0.10.0
                      ,yesod-static         >=1.2.0    && <1.6.0
  default-language:    Haskell2010

test-suite tests
  hs-source-dirs:      test
  main-is:             Tests.hs
  build-depends:       base                 >=4.7      && <4.9
                      ,doctest              >=0.9.13
                      ,quickcheck-instances >=0.3.11   && <0.3.12
                      ,safe                 >=0.3.9    && <0.3.10
                      ,tasty                >=0.10.1.2 && <0.10.2
                      ,tasty-hunit          >=0.9.2    && <0.9.3
                      ,tasty-quickcheck     >=0.8.3.2  && <0.8.4
  ghc-options:         -Wall
  default-extensions:  OverloadedStrings
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
