-- csh-eval.cabal

name:                  csh-eval
version:               0.1.0.0
synopsis:              REPL for PEOPLE
description:           REPL for PEOPLE
homepage:              https://github.com/ComputerScienceHouse/csh-eval
license:               MIT
license-file:          LICENSE
author:                Matt Gambogi, Stephen Demos, Travis Whitaker
maintainer:            pvals@csh.rit.edu
copyright:             Matt Gambogi, Stephen Demos, Travis Whitaker, Computer Science House 2015
category:              Control
build-type:            Simple
extra-source-files:    README.md
cabal-version:         >=1.10

executable csh-eval
  main-is:             Main.hs
  build-depends:       ansi-wl-pprint
                      ,base                 >=4.7      && <4.9
                      ,base64-bytestring    >=1.0      && <1.1
                      ,blaze-markup         >=0.7      && <0.8
                      ,bytestring           >=0.10     && <0.11
                      ,configurator         >=0.3      && <0.4
                      ,containers           >=0.5      && <0.6
                      ,either               >=4.4      && <4.5
                      ,hasql                >=0.7      && <0.8
                      ,hasql-postgres       >=0.10     && <0.11
                      ,ldap-client          >=0.1      && <0.2
                      ,monad-control        >=1.0      && <1.1
                      ,optparse-applicative >=0.11     && <0.12
                      ,safe                 >=0.3      && <0.4
                      ,servant              >=0.4      && <0.5
                      ,servant-server       >=0.4      && <0.5
                      ,shakespeare          >=2.0      && <2.1
                      ,text                 >=1.2      && <1.3
                      ,time                 >=1.5      && <1.6
                      ,uuid                 >=1.3      && <1.4
                      ,wai                  >=3.0      && <3.1
                      ,warp                 >=3.1      && <3.2
                      ,warp-tls             >=3.1      && <3.2
                      ,yesod                >=1.4      && <1.5
                      ,yesod-markdown       >=0.10     && <0.11
                      ,yesod-static         >=1.5      && <1.6
                      ,csh-eval
  hs-source-dirs:      src
  default-extensions:  OverloadedStrings
  default-language:    Haskell2010

executable csh-eval-db-init
  main-is:             DBInitMain.hs
  hs-source-dirs:      db
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  build-depends:       base                 >=4.7      && <4.9
                      ,hasql                >=0.7      && <0.8
                      ,hasql-postgres       >=0.10     && <0.11
                      ,bytestring           >=0.10     && <0.11
                      ,optparse-applicative >=0.11     && <0.12
                      ,text                 >=1.2      && <1.3
                      ,uuid                 >=1.3      && <1.4
                      ,csh-eval

library
  exposed-modules:     CSH.Eval.Cacheable.Prim
                      ,CSH.Eval.Cacheable.Fetch
                      ,CSH.Eval.Config
                      ,CSH.Eval.DB.Schema
                      ,CSH.Eval.DB.Statements
                      ,CSH.Eval.Frontend
                      ,CSH.Eval.Frontend.Data
                      ,CSH.Eval.Frontend.Evals
                      ,CSH.Eval.Frontend.Home
                      ,CSH.Eval.Frontend.Projects
                      ,CSH.Eval.Frontend.Attendance
                      ,CSH.Eval.Frontend.Widgets
                      ,CSH.Eval.LDAP
                      ,CSH.Eval.Routes
                      ,CSH.Eval.Model
                      ,CSH.LDAP
  hs-source-dirs:      src
  build-depends:       base                 >=4.7      && <4.9
                      ,base64-bytestring    >=1.0      && <1.1
                      ,blaze-markup         >=0.7      && <0.8
                      ,containers           >=0.5      && <0.6
                      ,either               >=4.4      && <4.5
                      ,transformers         >=0.4      && <0.5
                      ,containers           >=0.5      && <0.6
                      ,either               >=4.4      && <4.5
                      ,transformers         >=0.4      && <0.5
                      ,bytestring           >=0.10     && <0.11
                      ,configurator         >=0.3      && <0.4
                      ,hasql                >=0.7      && <0.8
                      ,hasql-postgres       >=0.10     && <0.11
                      ,ldap-client          >=0.1      && <0.2
                      ,monad-control        >=1.0      && <1.1
                      ,safe                 >=0.3      && <0.4
                      ,servant              >=0.4      && <0.5
                      ,servant-server       >=0.4      && <0.5
                      ,shakespeare          >=2.0      && <2.1
                      ,text                 >=1.2      && <1.3
                      ,time                 >=1.5      && <1.6
                      ,uuid                 >=1.3      && <1.4
                      ,wai                  >=3.0      && <3.1
                      ,warp                 >=3.1      && <3.2
                      ,warp-tls             >=3.1      && <3.2
                      ,yesod                >=1.4      && <1.5
                      ,yesod-markdown       >=0.10     && <0.11
                      ,yesod-static         >=1.5      && <1.6
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

test-suite tests
  hs-source-dirs:      test
  main-is:             Tests.hs
  build-depends:       base                 >=4.7      && <4.9
                      ,doctest              >=0.10     && <0.11
                      ,quickcheck-instances >=0.3      && <0.4
                      ,safe                 >=0.3      && <0.4
                      ,tasty                >=0.10     && <0.11
                      ,tasty-hunit          >=0.9      && <0.10
                      ,tasty-quickcheck     >=0.8      && <0.9
  ghc-options:         -Wall
  default-extensions:  OverloadedStrings
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
