-- csh-eval.cabal

name:                 csh-eval
version:              0.1.0.0
synopsis:             REPL for PEOPLE
description:          REPL for PEOPLE
homepage:             https://github.com/ComputerScienceHouse/csh-eval
license:              MIT
license-file:         LICENSE
author:               Matt Gambogi, Stephen Demos, Travis Whitaker
maintainer:           pvals@csh.rit.edu
copyright:            Matt Gambogi, Stephen Demos, Travis Whitaker, Computer Science House 2015
category:             Control
build-type:           Simple
extra-source-files:   README.md
cabal-version:        >=1.10

executable csh-eval
  main-is:            Main.hs
  build-depends:      ansi-wl-pprint
                    , base
                    , optparse-applicative
                    , warp
                    , warp-tls
                    , csh-eval
  hs-source-dirs:     app
  default-extensions: OverloadedStrings
  default-language:   Haskell2010

library
  exposed-modules:    CSH.Eval.Cacheable.Prim
                    , CSH.Eval.Cacheable.Fetch
                    , CSH.Eval.Cacheable.Make
                    , CSH.Eval.Config
                    , CSH.Eval.DB.Init
                    , CSH.Eval.DB.Schema
                    , CSH.Eval.DB.Statements
                    , CSH.Eval.Frontend
                    , CSH.Eval.Frontend.Data
                    , CSH.Eval.Frontend.Evals
                    , CSH.Eval.Frontend.Home
                    , CSH.Eval.Frontend.Members
                    , CSH.Eval.Frontend.ProfilePhoto
                    , CSH.Eval.Frontend.Projects
                    , CSH.Eval.Frontend.Attendance
                    , CSH.Eval.Frontend.Widgets
                    , CSH.Eval.Routes
                    , CSH.Eval.Model
                    , CSH.LDAP
  hs-source-dirs:     src
  build-depends:      base
                    , blaze-markup
                    , containers
                    , either
                    , transformers
                    , containers
                    , either
                    , transformers
                    , bytestring
                    , configurator
                    , cryptohash
                    , hasql
                    , hasql-postgres
                    , hslogger
                    , http-types
                    , ldap-client
                    , monad-control
                    , optparse-applicative
                    , safe
                    , servant
                    , servant-server
                    , shakespeare
                    , text
                    , time
                    , uuid
                    , wai
                    , yesod
                    , yesod-markdown
                    , yesod-static
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
                    , TemplateHaskell

test-suite tests
  hs-source-dirs:     test
  main-is:            Tests.hs
  build-depends:      base
                    , doctest
                    , quickcheck-instances
                    , safe
                    , tasty
                    , tasty-hunit
                    , tasty-quickcheck
  ghc-options:        -Wall
  default-extensions: OverloadedStrings
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
